refactor(channel): migrate FCM to firebase-admin SDK, single-device only
Replace hand-rolled HTTP v1 client + GoogleCredentials token refresh with
FirebaseApp/FirebaseMessaging. FcmSendReq now carries a single deviceToken
instead of a list; data payload moves to top-level per FCM spec. dispose()
deletes the FirebaseApp so ChannelManager refreshes clean up correctly.